tests/rosetta/out/Smalltalk/additive-primes.out
/workspace/mochi/tests/rosetta/out/Smalltalk/additive-primes.st:41: parse error, expected '|' or identifier
